--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             - mysql
             # - redis
             # - meilisearch
-            - selenium
+            # - selenium
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
