--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "tailwindcss": "^3.0.18",
+        "ts-loader": "^9.2.8",
+        "typescript": "^4.6.3",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
     },
