--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "primeicons": "^5.0.0",
         "primevue": "^3.12.4"
     }
 }
