Fixed some editing stuff, but broke something while running 'sail npm' commands

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     },
     "dependencies": {
         "primeicons": "^5.0.0",
-        "primevue": "^3.12.4"
+        "primevue": "^3.12.4",
+        "sass": "^1.50.0",
+        "sass-loader": "^12.6.0"
     }
 }
