--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "nprogress": "^0.2.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
         "primevue": "^3.12.4",
