--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^5.11.0",
+        "@fullcalendar/daygrid": "^5.11.0",
+        "@fullcalendar/interaction": "^5.11.0",
+        "@fullcalendar/vue3": "^5.11.1",
         "nprogress": "^0.2.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
