--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@tailwindcss/forms": "^0.5.0",
+        "@types/nprogress": "^0.2.0",
         "@vue/compiler-sfc": "^3.2.31",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
