--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@fullcalendar/interaction": "^5.11.0",
         "@fullcalendar/vue3": "^5.11.1",
         "mitt": "^3.0.0",
+        "moment": "^2.29.3",
         "nprogress": "^0.2.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
