--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@fullcalendar/vue3": "^5.11.1",
         "mitt": "^3.0.0",
         "moment": "^2.29.3",
+        "moment-timezone": "^0.5.34",
         "nprogress": "^0.2.0",
         "primeflex": "^3.1.3",
         "primeicons": "^5.0.0",
