--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "primevue": "^3.12.4",
         "sass": "^1.50.0",
         "sass-loader": "^12.6.0",
-        "v-tooltip": "^2.1.3"
+        "v-tooltip": "^2.1.3",
+        "vue-router": "^4.0.16"
     }
 }
