--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.7",
+        "owen-it/laravel-auditing": "^13.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
